kdb 4.1: is ready for full testing