@@ -2,42 +2,65 @@ package org.kdb.inside.brains.view.struct;
 
 import com.intellij.ide.structureView.StructureViewTreeElement;
 import com.intellij.ide.structureView.impl.common.PsiTreeElementBase;
+import com.intellij.pom.Navigatable;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiFile;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.kdb.inside.brains.psi.*;
 
+import javax.swing.*;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 import java.util.stream.Stream;
 
-import static org.kdb.inside.brains.psi.QPsiUtil.getImportContent;
-
 public class QStructureViewElement extends PsiTreeElementBase<PsiElement> {
-    private final String text;
-    private final PsiElement content;
+    private final @NotNull String text;
+    private final @NotNull PsiElement navigable;
     private final @NotNull StructureElementType type;
+    private final @Nullable Supplier<PsiElement[]> children;
+
+    private final Icon icon;
+    private final boolean globalDeclaration;
 
     protected QStructureViewElement(@NotNull PsiFile file) {
-        this(file, StructureElementType.FILE, file.getName(), file);
+        this(file, StructureElementType.FILE, file.getName(), file, file::getChildren);
     }
 
-    private QStructureViewElement(@NotNull PsiElement element, @NotNull StructureElementType type, String text) {
-        this(element, type, text, null);
+    private QStructureViewElement(@NotNull PsiElement element, @NotNull StructureElementType type, @NotNull String text) {
+        this(element, type, text, element);
     }
 
-    private QStructureViewElement(@NotNull PsiElement element, @NotNull StructureElementType type, String text, PsiElement content) {
+    private QStructureViewElement(@NotNull PsiElement element, @NotNull StructureElementType type, @NotNull String text, @Nullable PsiElement navigable) {
+        this(element, type, text, navigable, null);
+    }
+
+    private QStructureViewElement(@NotNull PsiElement element, @NotNull StructureElementType type, @NotNull String text, @Nullable PsiElement navigable, @Nullable Supplier<PsiElement[]> children) {
         super(element);
         this.type = type;
         this.text = text;
-        this.content = content;
+        this.children = children;
+        this.navigable = navigable == null ? element : navigable;
+
+        if (navigable instanceof QVarDeclaration d && !(element instanceof QContext)) {
+            icon = type.getIcon(globalDeclaration = QPsiUtil.isGlobalDeclaration(d));
+        } else if (navigable instanceof QSymbol) {
+            icon = type.getIcon(globalDeclaration = true);
+        } else {
+            globalDeclaration = true;
+            icon = type.getIcon();
+        }
     }
 
     @Override
-    public @Nullable String getPresentableText() {
+    public Icon getIcon(boolean open) {
+        return icon;
+    }
+
+    @Override
+    public @NotNull String getPresentableText() {
         return text;
     }
 
@@ -46,55 +69,106 @@ public class QStructureViewElement extends PsiTreeElementBase<PsiElement> {
     }
 
     @Override
+    public boolean canNavigate() {
+        return navigable instanceof Navigatable n && n.canNavigate();
+    }
+
+    public boolean isGlobalDeclaration() {
+        return globalDeclaration;
+    }
+
+    @Override
+    public void navigate(boolean requestFocus) {
+        if (navigable instanceof Navigatable n) {
+            n.navigate(requestFocus);
+        }
+    }
+
+    @Override
     public @NotNull Collection<StructureViewTreeElement> getChildrenBase() {
-        if (content == null || type.isAlwaysLeaf()) {
+        if (children == null || type.isAlwaysLeaf()) {
             return List.of();
         }
-        if (content instanceof QDictExpr d) {
-            return getDictChildren(d);
-        }
-        if (content instanceof QTableExpr t) {
-            return getTableChildren(t);
-        }
-        return Stream.of(content.getChildren()).map(QStructureViewElement::createViewElement).filter(Objects::nonNull).collect(Collectors.toList());
-    }
-
-    private @NotNull Collection<StructureViewTreeElement> getDictChildren(QDictExpr d) {
-        final List<QTableColumn> fields = d.getFields();
-        if (fields == null) {
+        final PsiElement[] values = children.get();
+        if (values == null) {
             return List.of();
         }
-        return fields.stream()
-                .map(QStructureViewElement::createViewElement)
-                .collect(Collectors.toList());
+        return Stream.of(values).flatMap(QStructureViewElement::createViewElement).filter(Objects::nonNull).toList();
     }
 
-    private @NotNull Collection<StructureViewTreeElement> getTableChildren(QTableExpr t) {
-        return Stream.of(t.getKeys(), t.getValues())
-                .filter(Objects::nonNull)
-                .map(QTableColumns::getColumns)
-                .flatMap(Collection::stream)
-                .map(QStructureViewElement::createViewElement)
-                .collect(Collectors.toList());
-    }
-
-    public static @Nullable QStructureViewElement createViewElement(PsiElement child) {
-        if (child instanceof QImport qImport) {
-            return createImport(qImport);
-        } else if (child instanceof QCommand cmd) {
-            return createCommand(cmd);
-        } else if (child instanceof QContext context) {
-            return createContext(context);
-        } else if (child instanceof QLambdaExpr lambda) {
-            return createLambdaElement(lambda, "\uD835\uDF06");
-        } else if (child instanceof QTableColumn col) {
-            return createTableColumns(col);
-        } else if (child instanceof QAssignmentExpr assignment) {
+    public static @NotNull Stream<StructureViewTreeElement> createViewElement(@NotNull PsiElement element) {
+        if (element instanceof QImport i) {
+            return Stream.ofNullable(createImport(i));
+        }
+        if (element instanceof QCommand cmd) {
+            return Stream.ofNullable(createCommand(cmd));
+        }
+        if (element instanceof QContext context) {
+            return Stream.ofNullable(createContext(context));
+        }
+        if (element instanceof QTableColumn col) {
+            return Stream.ofNullable(createTableColumns(col));
+        }
+        if (element instanceof QInvokeFunction func) {
+            return Stream.ofNullable(createSet(func));
+        }
+        if (element instanceof QAssignmentExpr assignment) {
             return createAssignment(assignment);
-        } else if (child instanceof QInvokeFunction func) {
-            return createSet(func);
         }
-        return null;
+        return Stream.empty();
+    }
+
+    private static @NotNull QStructureViewElement createImport(QImport qImport) {
+        return new QStructureViewElement(qImport, StructureElementType.IMPORT, qImport.getFilePath());
+    }
+
+    private static @NotNull QStructureViewElement createCommand(QCommand cmd) {
+        return new QStructureViewElement(cmd, StructureElementType.COMMAND, cmd.getText());
+    }
+
+    private static @NotNull QStructureViewElement createContext(QContext context) {
+        final QVarDeclaration nameVar = context.getVariable();
+        final String name = nameVar == null ? "." : nameVar.getName();
+        return new QStructureViewElement(context, StructureElementType.CONTEXT, name, nameVar, () -> {
+            final QContextBody body = context.getContextBody();
+            return body == null ? null : body.getChildren();
+        });
+    }
+
+    private static @NotNull Stream<StructureViewTreeElement> createAssignment(QAssignmentExpr assignment) {
+        return assignment.getVarAssignments().stream().map(QStructureViewElement::createVarAssignment);
+    }
+
+    private static @NotNull QStructureViewElement createVarAssignment(VarAssignment assignment) {
+        final QVarDeclaration variable = assignment.declaration();
+        final QExpression expression = assignment.expression();
+
+        final String name = variable.getQualifiedName();
+        if (expression instanceof QLambdaExpr lambda) {
+            return new QStructureViewElement(lambda, StructureElementType.LAMBDA, name + lambda.getParametersInfo(), variable, () -> {
+                final QExpressions expressions = lambda.getExpressions();
+                return expressions == null ? null : expressions.getExpressionList().toArray(PsiElement[]::new);
+            });
+        }
+        if (expression instanceof QTableExpr tbl) {
+            return new QStructureViewElement(tbl, StructureElementType.TABLE, name, variable, () -> tbl.getColumns().toArray(PsiElement[]::new));
+        }
+        if (expression instanceof QDictExpr dict) {
+            return new QStructureViewElement(dict, StructureElementType.DICT, name, variable, () -> dict.getColumns().toArray(PsiElement[]::new));
+        }
+        return new QStructureViewElement(variable, StructureElementType.VARIABLE, name + ": " + getExpressionType(expression));
+    }
+
+    private static @NotNull QStructureViewElement createTableColumns(QTableColumn col) {
+        final PsiElement parent = col.getParent();
+        final boolean keys = parent instanceof QTableKeys;
+        final QVarDeclaration varDeclaration = col.getVarDeclaration();
+
+        final QExpression expression = col.getExpression();
+        final String desc = expression == null ? "reference" : getExpressionType(expression);
+        final String name = varDeclaration == null ? desc : varDeclaration.getQualifiedName() + ": " + desc;
+        final StructureElementType elType = keys ? (parent.getParent() instanceof QDictExpr ? StructureElementType.DICT_FIELD : StructureElementType.TABLE_KEY_COLUMN) : StructureElementType.TABLE_VALUE_COLUMN;
+        return new QStructureViewElement(col, elType, name);
     }
 
     private static @Nullable QStructureViewElement createSet(QInvokeFunction f) {
@@ -128,7 +202,7 @@ public class QStructureViewElement extends PsiTreeElementBase<PsiElement> {
         if (!(firstChild instanceof QSymbol sym)) {
             return null;
         }
-        final String name = sym.getName() + (expressions.size() == 2 ? getExpressionType(expressions.get(1)) : "");
+        final String name = sym.getName() + (expressions.size() == 2 ? ": " + getExpressionType(expressions.get(1)) : "");
         return new QStructureViewElement(sym, StructureElementType.SYMBOL, name);
     }
 
@@ -146,82 +220,33 @@ public class QStructureViewElement extends PsiTreeElementBase<PsiElement> {
         if (sf == null || !"set".equals(sf.getText())) {
             return null;
         }
-        final String name = sym.getName() + getExpressionType(ff.getExpression());
+        final String name = sym.getName() + ": " + getExpressionType(ff.getExpression());
         return new QStructureViewElement(sym, StructureElementType.SYMBOL, name);
     }
 
-    private static @Nullable QStructureViewElement createAssignment(QAssignmentExpr assignment) {
-        final QVarDeclaration variable = assignment.getVarDeclaration();
-        if (variable == null) {
-            return null;
-        }
-
-        final QExpression expression = assignment.getExpression();
-        if (expression == null) {
-            return null;
-        }
-
-        String name = variable.getQualifiedName();
-        if (expression instanceof QLambdaExpr lambda) {
-            return createLambdaElement(lambda, name);
-        } else if (expression instanceof QTableExpr) {
-            return new QStructureViewElement(assignment, StructureElementType.TABLE, name, expression);
-        } else if (expression instanceof QDictExpr) {
-            return new QStructureViewElement(assignment, StructureElementType.DICT, name, expression);
-        } else {
-            name += getExpressionType(expression);
-            return new QStructureViewElement(assignment, StructureElementType.VARIABLE, name);
-        }
-    }
-
-    private static @NotNull QStructureViewElement createTableColumns(QTableColumn col) {
-        final PsiElement parent = col.getParent();
-        final boolean keys = parent instanceof QTableKeys;
-        final QVarDeclaration varDeclaration = col.getVarDeclaration();
-
-        String name = varDeclaration == null ? "" : varDeclaration.getQualifiedName();
-        name += getExpressionType(col.getExpression());
-
-        final StructureElementType elType = keys ? (parent.getParent() instanceof QDictExpr ? StructureElementType.DICT_FIELD : StructureElementType.TABLE_KEY_COLUMN) : StructureElementType.TABLE_VALUE_COLUMN;
-        return new QStructureViewElement(col, elType, name);
-    }
-
-    private static @NotNull QStructureViewElement createCommand(QCommand cmd) {
-        return new QStructureViewElement(cmd, StructureElementType.COMMAND, cmd.getText());
-    }
-
-    private static @NotNull QStructureViewElement createImport(QImport qImport) {
-        return new QStructureViewElement(qImport, StructureElementType.IMPORT, getImportContent(qImport));
-    }
-
-    private static @NotNull QStructureViewElement createContext(QContext context) {
-        final QContextBody body = context.getContextBody();
-        final QVarDeclaration nameVar = context.getVariable();
-        if (nameVar == null) {
-            return new QStructureViewElement(context, StructureElementType.CONTEXT, ".", body);
-        } else {
-            return new QStructureViewElement(nameVar, StructureElementType.CONTEXT, nameVar.getName(), body);
-        }
-    }
-
-    @NotNull
-    private static QStructureViewElement createLambdaElement(QLambdaExpr lambda, String namePrefix) {
-        return new QStructureViewElement(lambda, StructureElementType.LAMBDA, namePrefix + lambda.getParametersInfo(), lambda.getExpressions());
-    }
-
-    private static String getExpressionType(QExpression expression) {
+    private static @NotNull String getExpressionType(QExpression expression) {
         if (expression == null) {
             return "";
         }
-        if (expression instanceof QTypeCastExpr) {
-            return ": " + QPsiUtil.getTypeCast((QTypeCastExpr) expression);
+        if (expression instanceof QTypeCastExpr tc) {
+            String t = tc.getTypeCast().getText();
+            return t.substring(t.charAt(0) == '`' ? 1 : 0, t.length() - 1);
         }
-        if (expression instanceof QLiteralExpr) {
-            return ": " + expression.getText();
+        if (expression instanceof QVarReference ref) {
+            return ref.getQualifiedName();
+        }
+        if (expression instanceof QLiteralExpr l) {
+            if (l.getSymbol() != null) {
+                return "symbol";
+            }
+            if (l.getSymbols() != null) {
+                return "symbols";
+            }
+            return l.getFirstChild().getNode().getElementType().toString();
         }
         if (expression instanceof QQueryExpr) {
-            return ": query";
+            return "query";
         }
-        return ": expression";
+        return "expression";
     }
 }
